# soulcli

./: .gitignore  LICENSE  README.md  run.sh
python_api/: app.py  llm_client.py  memory.py  router.py  tools.py
rust_cli/: Cargo.toml
rust_cli/src/: api_client.rs  autocorrect.rs  history.rs  main.rs  router.rs  shell.rs  ui.rs
