[package]
name = "soulshell"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
textwrap = "0.16"
anyhow = "1.0"
directories = "5.0"
strsim = "0.11"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
symspell = "0.1"
thiserror = "1"
unicode-width = "0.1"
